wrap fix

--- a/src/components/pages/7Subscription/Subscription.module.css
+++ b/src/components/pages/7Subscription/Subscription.module.css
@@ -82,7 +82,6 @@
     display: flex;
     gap: 3%;
     justify-content: center;
-    flex-wrap: wrap;
 }
 
 .card {
